src/snapshots/nml__lexer__lexer_tests__underscore_middle.snap
---
source: src/lexer.rs
expression: "format!(\"Input: {}\\n\\n{}\", input, tokens)"
---
Input: let ide_nt = 2

   1:0  -    1:3  Let
   1:3  -    1:4  Trivia Space
   1:4  -    1:10 Identifier: ide_nt
   1:10 -    1:11 Trivia Space
   1:11 -    1:12 Assign
   1:12 -    1:13 Trivia Space
   1:13 -    1:14 Number: 2
   1:14 -    1:0  EOF
